--- a/djaja_works/app/src/main/AndroidManifest.xml
+++ b/djaja_works/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".view.register"></activity>
+        <activity android:name=".view.register" />
+        <activity android:name=".view.add_usaha"></activity>
     </application>
 
 </manifest>
