--- a/djaja_works/app/src/main/AndroidManifest.xml
+++ b/djaja_works/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Profile"></activity>
+        <activity android:name=".profilakun"></activity>
     </application>
 
 </manifest>
