--- a/djaja_works/app/src/main/AndroidManifest.xml
+++ b/djaja_works/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="blank.djaja_works">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -23,7 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".profilakun"></activity>
+        <activity android:name=".view.profilakun" />
+        <activity android:name=".view.Proposal" />
+        <activity android:name=".view.Topdown"></activity>
     </application>
 
 </manifest>
